# TurkishDeasciifier-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: NGramDeasciifierTest.c  SimpleAsciifierTest.c  SimpleDeasciifierTest.c
src/: CMakeLists.txt  NGramDeasciifier.c  NGramDeasciifier.h  SimpleAsciifier.c  SimpleAsciifier.h  SimpleDeasciifier.c  SimpleDeasciifier.h
