cmake_minimum_required(VERSION 3.23)
project(Deasciifier)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_FLAGS "-O3")

find_package(morphological_analysis_c REQUIRED)
find_package(n_gram_c REQUIRED)

add_library(Deasciifier src/SimpleAsciifier.c src/SimpleAsciifier.h src/SimpleDeasciifier.c src/SimpleDeasciifier.h src/NGramDeasciifier.c src/NGramDeasciifier.h)
target_link_libraries(Deasciifier morphological_analysis_c::morphological_analysis_c n_gram_c::n_gram_c)
add_executable(SimpleAsciifierTest src/SimpleAsciifier.c src/SimpleAsciifier.h src/SimpleDeasciifier.c src/SimpleDeasciifier.h src/NGramDeasciifier.c src/NGramDeasciifier.h Test/SimpleAsciifierTest.c)
target_link_libraries(SimpleAsciifierTest morphological_analysis_c::morphological_analysis_c n_gram_c::n_gram_c)
add_executable(SimpleDeasciifierTest src/SimpleAsciifier.c src/SimpleAsciifier.h src/SimpleDeasciifier.c src/SimpleDeasciifier.h src/NGramDeasciifier.c src/NGramDeasciifier.h Test/SimpleDeasciifierTest.c)
target_link_libraries(SimpleDeasciifierTest morphological_analysis_c::morphological_analysis_c n_gram_c::n_gram_c)
add_executable(NGramDeasciifierTest src/SimpleAsciifier.c src/SimpleAsciifier.h src/SimpleDeasciifier.c src/SimpleDeasciifier.h src/NGramDeasciifier.c src/NGramDeasciifier.h Test/NGramDeasciifierTest.c)
target_link_libraries(NGramDeasciifierTest morphological_analysis_c::morphological_analysis_c n_gram_c::n_gram_c)
